--- a/Authentic/Authentic/Authentic/Authentic.xcodeproj/xcshareddata/xcschemes/Authentic.xcscheme
+++ b/Authentic/Authentic/Authentic/Authentic.xcodeproj/xcshareddata/xcschemes/Authentic.xcscheme
@@ -76,8 +76,8 @@
       </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
-            key = "IDEPreferLogStreaming=YES"
-            value = ""
+            key = "IDEPreferLogStreaming"
+            value = "YES"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
