--- a/Authentic/Authentic/Authentic/GoogleService-Info.plist
+++ b/Authentic/Authentic/Authentic/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>913606794044-4p35dpefa72us00816nn0abp9pnrn3lr.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.913606794044-4p35dpefa72us00816nn0abp9pnrn3lr</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCjowFrfLPcgNrVQon4MDHO8J0a7DIjgIo</string>
 	<key>GCM_SENDER_ID</key>
@@ -26,5 +30,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:913606794044:ios:5bc31073c19b7fdc581c39</string>
+	<key>DATABASE_URL</key>
+	<string>https://authentic-d4c06-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
